Prevent wrapping of GPG label

--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -32,6 +32,7 @@
     h2 {
       margin: 0px;
       padding: 5px;
+      white-space: pre;
     }
     &.active{
       color: white;
